kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: easyshop-ingress
  namespace: easyshop
  annotations:
    alb.ingress.kubernetes.io/group.name: easyshop-app-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:637423357842:certificate/3fcfd586-3638-4997-9073-95d43d155430
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    kubernetes.io/ingress.class: alb
spec:
  rules:
    - host: easyshop.letsdeployit.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: easyshop-service
                port:
                  number: 80
